@@ -1,3 +1,14 @@
+2007-04-05  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Maciej.
+
+        Move WebView and NSWindow creation to a separate function in preparation of supporting opening new
+        windows in DRT.
+
+        * DumpRenderTree/DumpRenderTree.m:
+        (createWebView):
+        (dumpRenderTree):
+
 2007-04-03  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Darin.
